--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,4 +3,5 @@ set -g mode-keys vi
 set -g status-keys vi
 set -g default-terminal tmux-256color
 
-# TODO: bind something to `set mouse` (toggles)
+bind-key C-M set mouse
+bind-key C-R source ~/.tmux.conf
