--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
 set -g mouse on
 set -g mode-keys vi
 set -g status-keys vi
-set -g default-terminal tmux-256color
+
+# Matters only for debian's ~/.bashrc prompt?
+set -g default-terminal screen-256color  
 
 bind-key C-M set mouse
 bind-key C-R source ~/.tmux.conf
