--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,5 +5,6 @@ set -g status-keys vi
 # Matters only for debian's ~/.bashrc prompt?
 set -g default-terminal screen-256color  
 
-bind-key C-M set mouse
-bind-key C-R source ~/.tmux.conf
+bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
+bind-key C-R source ~/.tmux.conf \; display-message "Config reloaded."
+bind-key -n DoubleClick1Pane select-pane\; resize-pane -Z
