--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,3 +8,7 @@ set -g default-terminal screen-256color
 bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
 bind-key C-R source ~/.tmux.conf \; display-message "Config reloaded."
 bind-key -n DoubleClick1Pane select-pane\; resize-pane -Z
+
+# Don't show the note. Use C-b ? for that
+bind-key / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
+# bind-key -g ? list-keys -Na # Use :lsk instead?
