--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,3 +12,9 @@ bind-key -n DoubleClick1Pane select-pane\; resize-pane -Z
 # Don't show the note. Use C-b ? for that
 bind-key / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
 # bind-key -g ? list-keys -Na # Use :lsk instead?
+
+# Options to keep or drop CWD
+bind C new-window
+bind c new-window -c '#{pane_current_path}'
+bind '"' split-window -c '#{pane_current_path}'
+bind '%' split-window -h -c '#{pane_current_path}'
