--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,14 @@
+# https://emacs.stackexchange.com/questions/39042
+# https://github.com/tmux/tmux/issues/131
+# Is this safe?
+set -sg escape-time 100  # Default is 500
+
 set -g mouse on
 set -g mode-keys vi
 set -g status-keys vi
 
-# Matters only for debian's ~/.bashrc prompt?
-set -g default-terminal screen-256color  
+set -g default-terminal tmux-256color
+set -g set-clipboard on
 
 bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
 bind-key C-R source ~/.tmux.conf \; display-message "Config reloaded."
