Move .gitconfig to .config/git/config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,43 +1,1 @@
-[alias]
-    s = status --short --branch
-    d = diff --stat
-    cln = clean -i :/
-    adda = add :/
-    lst = ls-files --with-tree
-
-    # For other rebases, made fish abbreviations
-    autosquash = rebase --root --autostash --autosquash
-
-    amend = commit --amend --no-edit
-    amenda = amend --all
-
-    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %Creset' --abbrev-commit --date=relative
-    # With author:
-    # lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
-
-  watch = "!watch -t --color 'git -c color.ui=always status --short | head -n 3; echo; git lg --color --all -n $LINES'"
-  # ==== Pipefail does not work since status always succeeds
-  # watch = "!watch -t --color -x bash -c 'set -o pipefail; git -c color.ui=always status --short | head -n 3 && echo; git lg --color --all -n 30'"
-  # ===== Cut off long file with mark.  ====
-  # awk 'BEGIN {cutoff = 4} NR < cutoff { print $0 } NR == cutoff {print $0 " ...\n"}'
-  # Maybe also END && NR > 0 {print "\n"}
-
-[pull]
-# rebase = true
-ff = only
-
-[credential]
-	helper = cache --timeout 72000
-[init]
-	defaultBranch = main
-
-# === .hgrc merge config ===
-# vimdiff_4.executable = vimdiff
-# vimdiff_4.args = -f -d $output -M $local $base $other -c "wincmd J" -c "setl modifiable write"
-# vimdiff_4.premerge = keep
-# vimdiff_3.executable = vimdiff
-# vimdiff_3.args = -f -M $local $base $other -c "wincmd J" -c "setl modifiable write"
-# vimdiff_3.premerge = keep
-
-[include]
-    path = ~/.gitconfig.site
+.config/git/config
