--- a/.config/git/config
+++ b/.config/git/config
@@ -31,6 +31,28 @@ ff = only
 [init]
 	defaultBranch = main
 
+[difftool "ediff"]
+              cmd = emacs --eval \"(ediff-files \\\"$LOCAL\\\" \\\"$REMOTE\\\")\"
+[difftool "ediffdir"]
+              cmd = emacs -nw --eval \"(ediff-directories \\\"$LOCAL\\\" \\\"$REMOTE\\\")\"
+[difftool "ediffclient"]
+              cmd = emacsclient --eval \"(ediff-files \\\"$LOCAL\\\" \\\"$REMOTE\\\")\"
+# https://stackoverflow.com/questions/1817370/using-ediff-as-git-mergetool
+[mergetool.ediff]
+        cmd = emacs --eval \"\
+        (progn\
+          (defun ediff-write-merge-buffer ()\
+            (let ((file ediff-merge-store-file))\
+              (set-buffer ediff-buffer-C)\
+              (write-region (point-min) (point-max) file)\
+              (message \\\"Merge buffer saved in: %s\\\" file)\
+              (set-buffer-modified-p nil)\
+              (sit-for 1)))\
+          (setq ediff-quit-hook 'kill-emacs\
+                ediff-quit-merge-hook 'ediff-write-merge-buffer)\
+          (ediff-merge-files-with-ancestor \\\"$LOCAL\\\" \\\"$REMOTE\\\"\
+                                           \\\"$BASE\\\" nil \\\"$MERGED\\\"))\"
+#
 # === .hgrc merge config ===
 # vimdiff_4.executable = vimdiff
 # vimdiff_4.args = -f -d $output -M $local $base $other -c "wincmd J" -c "setl modifiable write"
