--- a/.dosbox/dosbox-0.74-2.conf
+++ b/.dosbox/dosbox-0.74-2.conf
@@ -25,17 +25,21 @@
 
 fullscreen=false
 fulldouble=false
-fullresolution=original
+# fullresolution=original
+fullresolution=1024x768
 # fullresolution=desktop
 windowresolution=original
 # output=surface
-output=openglnb
+# Seemed to work
+# output=openglnb   
+# https://www.reddit.com/r/chromeos/comments/6q45ml/cant_get_dosbox_to_run_on_chromeos/
+output = overlay
 autolock=true
 sensitivity=100
 waitonerror=true
 priority=higher,normal
 mapperfile=mapper-0.74-2.map
-usescancodes=true
+usescancodes=false  # Was true; https://www.vogons.org/viewtopic.php?f=31&t=67017&p=756847&hilit=wayland#p756847
 
 [dosbox]
 # language: Select another language file.
