Future kak keybindings

--- a/.config/Code/User/ilyagr_home_config/settings.json
+++ b/.config/Code/User/ilyagr_home_config/settings.json
@@ -22,7 +22,7 @@
         "normal": {
             "cursorStyle": "block",
             "lineNumbers": "relative",
-            // "selectionBehavior": "character",  // Not sure what this does
+            "selectionBehavior": "character",  // Seems necesary with block cursor.
         }
     },
 
