--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,3 +23,10 @@ bind C new-window
 bind c new-window -c '#{pane_current_path}'
 bind '"' split-window -c '#{pane_current_path}'
 bind '%' split-window -h -c '#{pane_current_path}'
+
+# https://stackoverflow.com/questions/15439294/tmux-switch-the-split-style-of-two-adjacent-panes/70024796#70024796
+# Flipping the orientation of the current pane with the pane <arrow-way>-of
+bind -n S-Up move-pane -h -t '.{up-of}'
+bind -n S-Right move-pane -t '.{right-of}'
+bind -n S-Left move-pane -t '.{left-of}'
+bind -n S-down move-pane -h -t '.{down-of}'
