--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,14 +19,14 @@ bind-key / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
 # bind-key -g ? list-keys -Na # Use :lsk instead?
 
 # Options to keep or drop CWD
-bind C new-window
-bind c new-window -c '#{pane_current_path}'
+bind C   new-window
+bind c   new-window   -c '#{pane_current_path}'
 bind '"' split-window -c '#{pane_current_path}'
 bind '%' split-window -h -c '#{pane_current_path}'
 
 # https://stackoverflow.com/questions/15439294/tmux-switch-the-split-style-of-two-adjacent-panes/70024796#70024796
 # Flipping the orientation of the current pane with the pane <arrow-way>-of
-bind -n S-Up move-pane -h -t '.{up-of}'
-bind -n S-Right move-pane -t '.{right-of}'
-bind -n S-Left move-pane -t '.{left-of}'
-bind -n S-down move-pane -h -t '.{down-of}'
+bind S-Up    move-pane -h -t '.{up-of}'
+bind S-Right move-pane -t '.{right-of}'
+bind S-Left  move-pane -t '.{left-of}'
+bind S-down  move-pane -h -t '.{down-of}'
