--- a/.config/Code/User/ilyagr_home_config/settings.json
+++ b/.config/Code/User/ilyagr_home_config/settings.json
@@ -25,7 +25,16 @@
             "selectionBehavior": "character",  // Seems necesary with block cursor.
         }
     },
-
+    // Doesn't work :(
+    // "vspacecode.bindingOverrides": [
+    //     {
+    //         "keys": "w.enter",
+    //         "name": "Save all",
+    //         "type": "command",
+    //         "command": "saveAll",
+    //     }
+    // ],
+      
     // BEGIN VSpaceCode
     "git.confirmSync": false,
     "vim.easymotion": true,
@@ -81,6 +90,69 @@
     "julia.symbolCacheDownload": true,
     "julia.executablePath": "~/.local/bin/julia",
     "editor.wrappingIndent": "indent",
-    "editor.fontFamily": "'Fira Code',  'Droid Sans Mono', 'monospace', monospace",
+    "editor.fontFamily": "'Fira Mono', 'Fira Code',  'Droid Sans Mono', 'Source Code Pro', 'monospace', monospace",
     "editor.fontSize": 13.5,
+    
+    "editor.fontLigatures": true,
+    "disableLigatures.mode": "Cursor",
+    "disableLigatures.ligatures": [
+        // Wish I could disable these everywhere all the time.
+        ".=",
+        ".-",
+        "==",
+        "!==",
+        "=/=",
+        "->>",
+        ">->",
+        "<=<",
+        "<<=",
+        "=>>",
+        ">=>",
+        ">>=",
+        ">>-",
+        ">-",
+        "<~>",
+        "-<",
+        "-<<",
+        "=<<",
+        "<~~",
+        "<~",
+        "~~",
+        "~>",
+        "~~>",
+        "<=",
+        "<>",
+        ">=",
+        "{.",
+        "{|",
+        "[|",
+        "<:",
+        ":>",
+        "|]",
+        "|}",
+        ".}",
+        "<|||",
+        "<||",
+        "<|",
+        "<|>",
+        "|>",
+        "||>",
+        "|||>",
+        "<$",
+        "<$>",
+        "$>",
+        "<!==",
+        "</>",
+        "/>",
+        "***",
+        "~-",
+        "-~",
+        "~@",
+        "/=",
+        "/==",
+        "#!",
+        "##",
+        "###",
+        "####",
+    ],
 }
