--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@ bold_font Fira Code Bold
 font_size 11.7
 
 # cursor, never, always
-disable_ligatures always
+disable_ligatures cursor
 
 kitty_mod ctrl+super
 map ctrl+shift+c copy_to_clipboard
