--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,10 @@ font_size 11.7
 # cursor, never, always
 disable_ligatures always
 
-kitty_mod ctrl+super
+# The default ctrl+shift can't be passed to shell programs
+# anyway. Can try it, see if conflicts with something.
+# kitty_mod ctrl+shift+alt
+open_url_modifiers ctrl
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v  paste_from_clipboard
 
