--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 # DejaVu Sans Mono
 font_family Fira Code Medium
 bold_font Fira Code Bold
-font_size 11.7
+font_size 11.5
 
 # cursor, never, always
 disable_ligatures always
@@ -24,6 +24,10 @@ map ctrl+shift+v  paste_from_clipboard
 # by default, I plan on using tmux instead.
 map kitty_mod+f    toggle_fullscreen
 map kitty_mod+2     edit_config_file
+
+# Zoom by less
+map kitty_mod+equal     change_font_size all +0.5
+map kitty_mod+minus     change_font_size all -0.5
 
 # Suppress a stupid warning on ChromeOS. Should change
 # it back to `auto` when that's fixed.
