Tmux M-C-b to copy and Kitty with local config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 # DejaVu Sans Mono
 font_family Fira Code Medium
 bold_font Fira Code Bold
-font_size 11.5
+font_size 14
 
 # cursor, never, always
 disable_ligatures always
@@ -41,3 +41,5 @@ linux_display_server x11
 # "[|", "<:", ":>", "|]", "|}", ".}", "<|||", "<||", "<|", "<|>",
 # "|>", "||>", "|||>", "<$", "<$>", "$>", "<!==", "</>", "/>",
 # "***", "~-", "-~", "~@", "/=", "/==", ]
+
+include kitty.local.conf
