--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,12 +10,15 @@ set -g status-keys vi
 set -g default-terminal tmux-256color
 set -g set-clipboard on
 
+bind-key -n M-C-B copy-mode
+bind-key M-C-B send-keys M-C-B
+
 bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
 bind-key C-R source ~/.tmux.conf \; display-message "Config reloaded."
 bind-key -n DoubleClick1Pane select-pane\; resize-pane -Z
 
 # Don't show the note. Use C-b ? for that
-bind-key / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
+bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
 # bind-key -g ? list-keys -Na # Use :lsk instead?
 
 # Options to keep or drop CWD
