Ripgrep config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ set -g status-keys vi
 set -g default-terminal tmux-256color
 set -g set-clipboard on
 
-bind-key -n M-C-B copy-mode
-bind-key M-C-B send-keys M-C-B
+bind-key -N 'Enter copy mode' -n M-C-B copy-mode
+bind-key -N 'Send M-C-b' M-C-B send-keys M-C-B
 
 bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
 bind-key C-R source ~/.tmux.conf \; display-message "Config reloaded."
