Kitty: copy selection automatically

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,9 +16,12 @@ disable_ligatures always
 # The default ctrl+shift can't be passed to shell programs
 # anyway. Can try it, see if conflicts with something.
 # kitty_mod ctrl+shift+alt
-open_url_modifiers ctrl
-map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v  paste_from_clipboard
+# map ctrl+shift+c copy_to_clipboard
+copy_on_select clipboard
+skip_trailing_spaces smart
+open_url_modifiers ctrl
+strip_trailing_spaces smart
 
 # These shortcuts deal with kitty windows
 # by default, I plan on using tmux instead.
