Update to newer kitty (not the bullseye one anymore)

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,6 +2,7 @@
 
 # Defaults:
 # /usr/share/doc/kitty/examples/kitty.conf
+# ~/.local/share/doc/kitty/html/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
 # https://sw.kovidgoyal.net/kitty/conf/
 # file:///usr/share/doc/kitty/html/conf.html
 
@@ -19,20 +20,26 @@ disable_ligatures always
 map ctrl+shift+v  paste_from_clipboard
 # map ctrl+shift+c copy_to_clipboard
 copy_on_select clipboard
-skip_trailing_spaces smart
-open_url_modifiers ctrl
 strip_trailing_spaces smart
+
+# For older kitty
+# open_url_modifiers ctrl
+# This defaults to shift+click. I seem to prefer ctrl.
+mouse_map ctrl+left click grabbed,ungrabbed mouse_handle_click selection link prompt
 
 # These shortcuts deal with kitty windows
 # by default, I plan on using tmux instead.
-map kitty_mod+f    toggle_fullscreen
-map kitty_mod+2     edit_config_file
+map kitty_mod+f  toggle_fullscreen
+map kitty_mod+2  edit_config_file
+map kitty_mod+5  load_config_file
+map kitty_mod+6  debug_config
 
 # Zoom by less
 map kitty_mod+equal     change_font_size all +0.5
 map kitty_mod+minus     change_font_size all -0.5
 
-# Suppress a stupid warning on ChromeOS. Should change
+# Suppress a stupid warning on ChromeOS (older kitty)
+# or nothing working (newer kitty). Should change
 # it back to `auto` when that's fixed.
 linux_display_server x11
 
