Kitty: rename local config to site config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -52,4 +52,4 @@ linux_display_server x11
 # "|>", "||>", "|||>", "<$", "<$>", "$>", "<!==", "</>", "/>",
 # "***", "~-", "-~", "~@", "/=", "/==", ]
 
-include kitty.local.conf
+include kitty.site.conf
