--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,7 +15,8 @@ font_size 14
 disable_ligatures always
 
 # The default ctrl+shift can't be passed to shell programs
-# anyway. Can try it, see if conflicts with something.
+# anyway. Can try it, see if conflicts with something,
+# switch to ctrl+alt+shift if it does.
 # kitty_mod ctrl+shift+alt
 map ctrl+shift+v  paste_from_clipboard
 # map ctrl+shift+c copy_to_clipboard
@@ -25,6 +26,9 @@ strip_trailing_spaces smart
 # For older kitty
 # open_url_modifiers ctrl
 # This defaults to shift+click. I seem to prefer ctrl.
+# Kitty 0.21.2 (Debian bookworm?)
+mouse_map ctrl+left      click grabbed,ungrabbed mouse_click_url_or_select
+# Kitty 0.25 version
 mouse_map ctrl+left click grabbed,ungrabbed mouse_handle_click selection link prompt
 
 # These shortcuts deal with kitty windows
