--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,13 +23,12 @@ map ctrl+shift+v  paste_from_clipboard
 copy_on_select clipboard
 strip_trailing_spaces smart
 
-# For older kitty
-# open_url_modifiers ctrl
 # This defaults to shift+click. I seem to prefer ctrl.
-# Kitty 0.21.2 (Debian bookworm?)
+# Kitty 0.21.2 (Debian bookworm?) uses the following.
+# Kitty 0.25 can use a slightly more advanced version
 mouse_map ctrl+left      click grabbed,ungrabbed mouse_click_url_or_select
-# Kitty 0.25 version
-mouse_map ctrl+left click grabbed,ungrabbed mouse_handle_click selection link prompt
+# For older kitty ~0.19
+# open_url_modifiers ctrl
 
 # These shortcuts deal with kitty windows
 # by default, I plan on using tmux instead.
