--- a/.config/ripgrep.conf
+++ b/.config/ripgrep.conf
@@ -1,4 +1,5 @@
-# Must add to RIPGREP_CONFIG_PATH for this to work.
+# Must add this file to RIPGREP_CONFIG_PATH for it to apply.
+
 --max-columns=90
 --max-columns-preview
 
