Nord theme for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,45 +1,1 @@
-# https://emacs.stackexchange.com/questions/39042
-# https://github.com/tmux/tmux/issues/131
-# Is this safe?
-set -sg escape-time 100  # Default is 500
-
-set -g mouse on
-set -g mode-keys vi
-set -g status-keys vi
-
-set -g default-terminal tmux-256color
-# `bg=brightyellow` is an ~OK color even on Chrome terminal's
-# default theme.
-set-window-option -g window-status-current-style underscore
-set -g set-clipboard on
-
-bind-key -N 'Enter copy mode' -n M-C-B copy-mode
-bind-key -N 'Send M-C-b'         M-C-B send-keys M-C-B
-
-bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
-bind-key C-R source ~/.tmux.conf \; display-message "Config reloaded."
-bind-key -n DoubleClick1Pane select-pane\; resize-pane -Z
-
-# Don't show the note. Use C-b ? for that
-bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
-# bind-key -g ? list-keys -Na # Use :lsk instead?
-
-# Options to keep or drop CWD
-bind -N 'New window in ~'    C   new-window
-bind -N 'New window'         c   new-window   -c '#{pane_current_path}'
-bind -N 'Split vertically'   '"' split-window -c '#{pane_current_path}'
-bind -N 'Split horizontally' '%' split-window -h -c '#{pane_current_path}'
-
-bind -N 'Move pane to another window' \
-    j command-prompt -p index "join-pane -f -t '%%.'"
-bind -N 'Move pane to another window interactively' \
-    J choose-tree -Zw "join-pane -f -t '%%.'"
-bind -N 'Kill a session' \
-    X choose-tree -ZGs "kill-session -t '%%'"
-
-# https://stackoverflow.com/questions/15439294/tmux-switch-the-split-style-of-two-adjacent-panes/70024796#70024796
-# Flipping the orientation of the current pane with the pane <arrow-way>-of
-bind S-Up    move-pane -h -t '.{up-of}'
-bind S-Right move-pane -t '.{right-of}'
-bind S-Left  move-pane -t '.{left-of}'
-bind S-down  move-pane -h -t '.{down-of}'
+.config/tmux/tmux.conf
