Changed desktop file, make links more relative.

--- a/.local/share/applications/kitty-tmux.desktop
+++ b/.local/share/applications/kitty-tmux.desktop
@@ -4,8 +4,8 @@ Type=Application
 Name=kitty tmux
 GenericName=Terminal emulator
 Comment=Auto-start tmux in kitty terminal
-TryExec=kitty-tmux
-Exec=kitty-tmux
+TryExec=/home/ilyagr/.local/bin/kitty-tmux
+Exec=/home/ilyagr/.local/bin/kitty-tmux
 # Exec=kitty tmux new -As0
 # Icon=kitty
 # Icon=kitty-dark
