--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ set -g default-terminal tmux-256color
 # default theme.
 set-window-option -g window-status-current-style underscore
 set -g set-clipboard on
+set -g set-titles on
+# Pane title first
+set -g set-titles-string "#T @#S:#I '#W' #{session_alerts}"
 
 bind-key -N 'Enter copy mode' -n M-C-B copy-mode
 bind-key -N 'Send M-C-b'         M-C-B send-keys M-C-B
@@ -25,8 +28,9 @@ bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 
 # bind-key -g ? list-keys -Na # Use :lsk instead?
 
 # Options to keep or drop CWD
-bind -N 'New window in ~'    C   new-window
 bind -N 'New window'         c   new-window   -c '#{pane_current_path}'
+# In newer Tmux, C is taken by "Customize".
+bind -N 'New window in ~'    C-c new-window
 bind -N 'Split vertically'   '"' split-window -c '#{pane_current_path}'
 bind -N 'Split horizontally' '%' split-window -h -c '#{pane_current_path}'
 
