Extract `backup-gnome-settings`, save last `viclip`

--- a/.config/git/config
+++ b/.config/git/config
@@ -17,6 +17,7 @@
   amenda = !git adda && git amend
 
     meld = difftool -t meld -d
+    tig = !tig
 
 	# also git fscik --dangling --unreachable --lost-found
 	fsckdanglingunreachablecommits = "!git fsck --dangling --unreachable | grep commit | tee /dev/stderr |  cut '-d ' -f3 | xargs -n 1 git log -n 1"
