Mild zlua changes

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -9,3 +9,8 @@ alias default_config_dir cd %rangerdir/config/
 # Can't be used in output redirection though since Ranger also outputs some terminal junk.
 
 map /  console search_inc%space
+
+# Configure z.lua plugin
+# Could get more of these from ~/.config/fish/conf.d/zlua_or_zoxide.fish
+alias zf z -I
+alias zb z -b
