Move .tmux.conf to .config/tmux/tmux.conf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,7 +20,7 @@ bind-key -N 'Enter copy mode' -n M-C-B copy-mode
 bind-key -N 'Send M-C-b'         M-C-B send-keys M-C-B
 
 bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
-bind-key C-R source ~/.tmux.conf \; display-message "Config reloaded."
+bind-key C-R source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
 bind-key -n DoubleClick1Pane select-pane\; resize-pane -Z
 
 # Don't show the note. Use C-b ? for that
