Ranger and LF config

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -9,6 +9,10 @@ alias default_config_dir cd %rangerdir/config/
 # Can't be used in output redirection though since Ranger also outputs some terminal junk.
 
 map /  console search_inc%space
+# Default [] mapping is to move_parent. History is mapped
+# to HL, which I keep forgetting.
+map [ history_go -1
+map ] history_go 1
 
 # Configure z.lua plugin
 # Could get more of these from ~/.config/fish/conf.d/zlua_or_zoxide.fish
