Tmux pane highlight

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,6 +7,11 @@ set -g mouse on
 set -g mode-keys vi
 set -g status-keys vi
 
+# These require tmux 3.3.
+# Alternatively, see https://stackoverflow.com/a/33553372/563359
+set -g pane-border-lines heavy
+# set -g pane-border-indicators both # Too much?
+
 set -g default-terminal tmux-256color
 # `bg=brightyellow` is an ~OK color even on Chrome terminal's
 # default theme.
