--- a/.config/git/config
+++ b/.config/git/config
@@ -33,8 +33,8 @@
     # This becomes messy, since outputting to `watch` or `cat` defaults to `--decorate=no`.
 
     lg = log --graph --pretty=lg --abbrev-commit --date=relative --decorate=short
- 	lga = lg --branches --tags --remotes
-    lgaa = lg --all
+ 	lga = lg --branches --tags --remotes HEAD
+    lgaa = lg --all --decorate=auto
     # With author:
     # lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 
